# StravaAPI

./: .strava_api_auth_data.json  pyproject.toml
StravaAPI/: StravaAuthHandler.py  StravaWebHandler.py  __init__.py
tests/: test_stravaapi.py
