[tool.poetry]
name = "StravaAPI"
version = "0.1.1"
description = ""
authors = ["Marcel Kröker <kroeker.marcel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
selenium = "^3.141.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
